--- a/apps/player-stats-service/tsconfig.app.json
+++ b/apps/player-stats-service/tsconfig.app.json
@@ -5,5 +5,5 @@
     "types": ["node"]
   },
   "exclude": ["**/*.spec.ts"],
-  "include": ["**/*.ts", "**/types/**/*.d.ts"]
+  "include": ["**/*.ts", "**/@types/**/*.d.ts"]
 }
