--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "private": true,
   "dependencies": {
+    "date-fns": "^2.16.1",
     "fastify": "^3.1.1",
     "fastify-plugin": "^2.0.1",
     "firebase-admin": "^9.0.0",
