--- a/nx.json
+++ b/nx.json
@@ -17,18 +17,23 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
   "projects": {
     "player-stats-service": {
       "tags": []
+    },
+    "game-rules-service": {
+      "tags": []
+    },
+    "ok-scoring-web-client": {
+      "tags": []
+    },
+    "ok-scoring-web-client-e2e": {
+      "tags": [],
+      "implicitDependencies": ["ok-scoring-web-client"]
     }
   }
 }
