--- a/package.json
+++ b/package.json
@@ -34,26 +34,44 @@
     "firebase-admin": "^9.0.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "document-register-element": "1.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
-    "@nrwl/eslint-plugin-nx": "9.5.1",
-    "@nrwl/jest": "9.5.1",
-    "@nrwl/node": "9.5.1",
-    "@nrwl/workspace": "9.5.1",
-    "@types/jest": "25.1.4",
+    "@nrwl/eslint-plugin-nx": "10.3.2-beta.1",
+    "@nrwl/jest": "10.3.2-beta.1",
+    "@nrwl/node": "10.3.2-beta.1",
+    "@nrwl/react": "10.3.2-beta.1",
+    "@nrwl/workspace": "10.3.2-beta.1",
+    "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "@typescript-eslint/parser": "2.19.2",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
-    "jest": "25.2.3",
+    "jest": "26.2.2",
     "json-schema-to-typescript": "^9.1.1",
     "prettier": "2.0.4",
-    "ts-jest": "25.2.1",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.8.3"
+    "typescript": "4.0.5",
+    "cypress": "^4.1.0",
+    "@nrwl/cypress": "10.3.2-beta.1",
+    "@nrwl/web": "10.3.2-beta.1",
+    "@types/react": "16.9.38",
+    "@types/react-dom": "16.9.8",
+    "@testing-library/react": "10.4.1",
+    "eslint-plugin-cypress": "^2.10.3",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-typescript": "7.9.0",
+    "@babel/preset-react": "7.9.4",
+    "babel-jest": "26.2.2",
+    "@types/react-router-dom": "5.1.5"
   }
 }
